--- a/Views/DescriptionView.xaml
+++ b/Views/DescriptionView.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="EQD2Converter.DescriptionView"
+﻿<UserControl x:Class="DoseConverter.DescriptionView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:EQD2Converter"
-             xmlns:behaviours="clr-namespace:EQD2Converter.Behaviours"
+             xmlns:local="clr-namespace:DoseConverter"
+             xmlns:behaviours="clr-namespace:DoseConverter.Behaviours"
              xmlns:e="http://schemas.microsoft.com/expression/2010/interactivity" 
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              mc:Ignorable="d" 
