--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -1,15 +1,15 @@
-﻿<Window x:Class="EQD2Converter.MainWindow"
+﻿<Window x:Class="DoseConverter.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:EQD2Converter"
-        xmlns:behaviours="clr-namespace:EQD2Converter.Behaviours"
+        xmlns:local="clr-namespace:DoseConverter"
+        xmlns:behaviours="clr-namespace:DoseConverter.Behaviours"
         xmlns:dd="urn:gong-wpf-dragdrop"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance Type=local:ViewModel, IsDesignTimeCreatable=True}"
-        Title="Dose Converter v1.0" Height="600" Width="950" Background="White" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
+        Title="Dose Converter v1.1" Height="600" Width="950" Background="White" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
     <Window.Resources>
         <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" >
@@ -365,7 +365,7 @@
                                 </Grid>
                                 <Grid Grid.Column="6" Margin="5,0,0,0" Width="80" HorizontalAlignment="Center">
                                     <CheckBox IsChecked="{Binding IncludeEdges, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                       HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20,0,0,0">
+                                       HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20,0,0,0" IsEnabled="{Binding Include, UpdateSourceTrigger=PropertyChanged}">
                                         <CheckBox.Style>
                                             <Style>
                                                 <Style.Triggers>
