--- a/Views/XAMLDictionary.xaml
+++ b/Views/XAMLDictionary.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero" 
-                    xmlns:local="clr-namespace:EQD2Converter"
+                    xmlns:local="clr-namespace:DoseConverter"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="ButtonStyle_Small" TargetType="Button">
         <Setter Property="BorderBrush" Value="Transparent"/>
